--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "test:watch": "npm run test -- --watch",
     "generate-mock-data": "babel-node buildScripts/generateMockData",
     "prestart-mockapi": "npm run generate-mock-data",
-    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm-run-all clean-dist test lint",
+    "build": "babel-node buildScripts/build.js",
+    "postbuild": "babel-node buildScripts/distServer.js",
+    "postinstall": "rm -rf node_modules/react-styleguidist/node_modules/html-webpack-plugin/"
   },
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
     "faker": "^4.1.0",
+    "uglify-js": "^3.4.9",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-preset-latest": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
@@ -39,21 +45,23 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-watch": "^3.1.5",
     "express": "^4.16.4",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "2.22.0",
-    "jsdom": "^11.11.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.1.0",
+    "jsdom": "^11.12.0",
     "json-schema-faker": "^0.5.0-rc15",
-    "json-server": "^0.14.0",
+    "json-server": "^0.14.2",
     "localtunnel": "^1.9.1",
     "mocha": "^5.2.0",
-    "nock": "^10.0.2",
-    "npm-run-all": "^4.1.3",
+    "nock": "^10.0.5",
+    "npm-run-all": "^4.1.5",
     "nsp": "^3.2.1",
     "numeral": "^2.0.6",
     "open": "0.0.5",
     "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
-    "webpack": "^4.12.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-md5-hash": "0.0.6"
